--- a/themes/hyde/layouts/index.html
+++ b/themes/hyde/layouts/index.html
@@ -2,7 +2,7 @@
 <div class="posts">
   {{ range .Site.RegularPages -}}
   <article class="post">
-    <h1 class="post-title">
+    <!-- <h1 class="post-title">
       <a href="{{ .Permalink }}">{{ .Title }}</a>
     </h1>
     <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}" class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</time>
@@ -11,7 +11,12 @@
     <div class="read-more-link">
       <a href="{{ .RelPermalink }}">Read More…</a>
     </div>
-    {{ end }}
+    {{ end }} -->
+    <div class="post">
+      <h1>{{ .Title }}</h1>
+      <!-- <time datetime={{ .Date.Format "2006-01-02T15:04:05Z0700" }} class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</time> -->
+      {{ .Content }}
+    </div>
   </article>
   {{- end }}
 </div>
