--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -137,6 +137,17 @@ a.sidebar-nav-item:focus {
   }
 }
 
+@media (max-width: 450px) {
+  .content {
+    padding-right: 50px;
+  }
+
+  .github_icon {
+    right: 20px;
+    width: 25px;
+  }
+}
+
 /*
  * Reverse layout
  *
@@ -249,4 +260,12 @@ a.sidebar-nav-item:focus {
 .theme-base-0g .content a,
 .theme-base-0g .related-posts li a:hover {
   color: #218a70;
+}
+
+.github-icon {
+  width: 40px;
+  height: 40px;
+  position: fixed;
+  right: 30px;
+  bottom: 10px;
 }
