adding case study content
Co-authored-by: miajim <mjimenez@vt.edu>
Co-authored-by: romero-c-raul <raulromerocano@aggienetwork.com>
Co-authored-by: charleshartman <charles@hartman.dev>
Co-authored-by: sophiemcgarity <sophiemcgarity7@gmail.com>

--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -32,6 +32,10 @@
 html {
   font-family: 'Montserrat', sans-serif;
 }
+figcaption {
+  font-size: 0.8em;
+  text-align: center;
+}
 @media (min-width: 48em) {
   html {
     font-size: 14px;
