add more content, modify CSS, some edits
Co-authored-by: miajim <mjimenez@vt.edu>
Co-authored-by: romero-c-raul <raulromerocano@aggienetwork.com>
Co-authored-by: charleshartman <charles@hartman.dev>
Co-authored-by: sophiemcgarity <sophiemcgarity7@gmail.com>

--- a/themes/hyde/layouts/index.html
+++ b/themes/hyde/layouts/index.html
@@ -16,6 +16,142 @@
       <!-- <h1>{{ .Title }}</h1> -->
       <!-- <time datetime={{ .Date.Format "2006-01-02T15:04:05Z0700" }} class="post-date">{{ .Date.Format "Mon, Jan 2, 2006" }}</time> -->
       {{ .Content }}
+      <div id="team">
+        <p>
+          Our team of four software engineers collaborated remotely across four
+          different cities and three disparate timezones to build Artemis.
+          Please feel free to reach out to us if you have any questions about
+          Artemis or if you would like to discuss any of the topics mentioned in
+          our write up.
+        </p>
+        <ul class="team-members">
+          <li class="individual">
+            <a href="https://hartman.dev" target="_blank">
+              <img
+                class="portrait"
+                src="../assets/charles.jpg"
+                alt="Charles Hartman"
+              />
+            </a>
+            <h3>
+              Charles <br />
+              Hartman
+            </h3>
+            <p>Portland, OR</p>
+            <div class="icon-bar">
+              <a
+                href="https://www.linkedin.com/in/hartman-charles/"
+                target="_blank"
+              >
+                <img
+                  class="icon"
+                  src="../assets/linkedin.svg"
+                  alt="LinkedIn icon"
+                />
+              </a>
+              <a href="https://github.com/charleshartman" target="_blank">
+                <img
+                  class="icon"
+                  src="../assets/github.svg"
+                  alt="Github icon"
+                />
+              </a>
+            </div>
+          </li>
+          <li class="individual">
+            <a href="http://sophiemcgarity.tech/" target="_blank">
+              <img
+                class="portrait"
+                src="../assets/sophie.jpg"
+                alt="Sophie McGarity"
+              />
+            </a>
+            <h3>
+              Sophie <br />
+              McGarity
+            </h3>
+            <p>Seattle, WA</p>
+            <div class="icon-bar">
+              <a
+                href="https://www.linkedin.com/in/sophie-mcgarity-0866ba181/"
+                target="_blank"
+              >
+                <img
+                  class="icon"
+                  src="../assets/linkedin.svg"
+                  alt="LinkedIn icon"
+                />
+              </a>
+              <a href="https://github.com/sophiemcgarity" target="_blank">
+                <img
+                  class="icon"
+                  src="../assets/github.svg"
+                  alt="Github icon"
+                />
+              </a>
+            </div>
+          </li>
+          <li class="individual">
+            <a href="https://miajim.github.io" target="_blank">
+              <img class="portrait" src="../assets/mia.jpg" alt="Mia Jimenez" />
+            </a>
+            <h3>
+              Mia <br />
+              Jimenez
+            </h3>
+            <p>Fairfax, VA</p>
+            <div class="icon-bar">
+              <a href="https://www.linkedin.com/in/miajim" target="_blank">
+                <img
+                  class="icon"
+                  src="../assets/linkedin.svg"
+                  alt="LinkedIn icon"
+                />
+              </a>
+              <a href="https://github.com/miajim" target="_blank">
+                <img
+                  class="icon"
+                  src="../assets/github.svg"
+                  alt="LinkedIn icon"
+                />
+              </a>
+            </div>
+          </li>
+          <li class="individual raul">
+            <a href="https://raulromerocano.dev" target="_blank">
+              <img
+                class="portrait"
+                src="../assets/raul.jpg"
+                alt="Raul Romero Cano"
+              />
+            </a>
+            <h3>
+              Raul <br />
+              Romero Cano
+            </h3>
+            <p>St. Johns, NL</p>
+            <div class="icon-bar">
+              <a
+                href="https://www.linkedin.com/in/raul-r-05a433165/"
+                target="_blank"
+              >
+                <img
+                  class="icon"
+                  src="../assets/linkedin.svg"
+                  alt="LinkedIn icon"
+                />
+              </a>
+              <a href="https://github.com/romero-c-raul" target="_blank">
+                <img
+                  class="icon"
+                  src="../assets/github.svg"
+                  alt="Github icon"
+                />
+              </a>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </article>
   {{- end }}
