--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -332,6 +332,7 @@ a.sidebar-nav-item:focus {
   border-radius: 0%;
   min-width: 20px;
   max-width: 20px;
+  margin: 0px 5px;
 
   /* margin-left: 27px;
   margin-right: 5px; */
