--- a/themes/hyde/layouts/partials/sidebar.html
+++ b/themes/hyde/layouts/partials/sidebar.html
@@ -15,9 +15,13 @@
     <nav>
       <ul class="sidebar-nav">
         <!-- <li><a href="{{ .Site.BaseURL }}">Home</a></li> -->
-        <li><a href="/#introduction">Introduction</a></li>
-        <li><a href="/#overview_api_load_testing">APIs and Load testing</a></li>
-        <li><a href="/#existing_solutions">Existing solutions</a></li>
+        <li>
+          <a href="/#introduction">Introduction</a>
+        </li>
+        <li>
+          <a href="/#overview_api_load_testing">APIs and Load Testing</a>
+        </li>
+        <li><a href="/#existing_solutions">Existing Solutions</a></li>
         <li><a href="/#use_case">Use Case</a></li>
         <li><a href="/#introducing_artemis">Introducing Artemis</a></li>
         <li><a href="/#using_artemis">Using Artemis</a></li>
