--- a/css/hyde.css
+++ b/css/hyde.css
@@ -66,7 +66,7 @@ figcaption {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 18rem;
+    width: 22rem;
     text-align: left;
   }
 }
@@ -92,12 +92,20 @@ figcaption {
 .sidebar-nav-item {
   display: block;
 }
-a.sidebar-nav-item:hover,
-a.sidebar-nav-item:focus {
-  text-decoration: underline;
+
+.sidebar-nav a:hover,
+.sidebar-nav a:focus {
+  text-decoration: none;
+  color: #c6c6c6;
 }
 .sidebar-nav-item.active {
   font-weight: bold;
+}
+
+.sidebar-about h1:hover,
+.sidebar-about h1:focus {
+  text-decoration: none;
+  color: #c6c6c6;
 }
 
 /* Sticky sidebar
@@ -129,14 +137,14 @@ a.sidebar-nav-item:focus {
 @media (min-width: 48em) {
   .content {
     max-width: 42rem;
-    margin-left: 20rem;
+    margin-left: 24rem;
     margin-right: 2rem;
   }
 }
 
 @media (min-width: 64em) {
   .content {
-    margin-left: 22rem;
+    margin-left: 26rem;
     margin-right: 4rem;
   }
 }
@@ -297,6 +305,20 @@ a.sidebar-nav-item:focus {
 #team a {
   color: #282828;
   text-decoration: none;
+}
+
+@media (max-width: 550px) {
+  #team .team-members {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #team .individual .portrait {
+    border-radius: 100%;
+    margin: 20px auto 20px;
+  }
 }
 
 #team .team-members {
