--- a/css/poole.css
+++ b/css/poole.css
@@ -72,7 +72,8 @@ a {
 /* `:focus` is linked to `:hover` for basic accessibility */
 a:hover,
 a:focus {
-  text-decoration: underline;
+  text-decoration: none;
+  color: #c6c6c6;
 }
 
 /* Headings */
