--- a/themes/hyde/layouts/partials/sidebar.html
+++ b/themes/hyde/layouts/partials/sidebar.html
@@ -1,14 +1,14 @@
 <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <img src="/apple-touch-icon-144-precomposed.png" />
+      <!-- <img src="/apple-touch-icon-144-precomposed.png" /> -->
       <a href="{{ .Site.BaseURL }}"><h1>{{ .Site.Title }}</h1></a>
       <p class="lead">
-        {{ with .Site.Params.description }} {{.}} {{ else }}An elegant open
+        <!-- {{ with .Site.Params.description }} {{.}} {{ else }}An elegant open
         source and mobile first theme for
         <a href="http://hugo.spf13.com">hugo</a> made by
         <a href="http://twitter.com/mdo">@mdo</a>. Originally made for
-        Jekyll.{{end}}
+        Jekyll.{{end}} -->
       </p>
     </div>
 
